system_tests/syntax_error/syntax_error.rtestx
<?xml version="1.0" encoding="utf-8"?>
<test>
    <model name="syntax_error.rdox" target="CONSOLE" exit_code="3" log_compilation="syntax_error.rlog"/>
</test>